--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Debounce</title>
+  <style>
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .input-container {
+      display: flex;
+      gap: 20px;
+    }
+  </style>
+</head>
+<body>
+  
+  <div class="container">
+
+    <div class="input-container">
+      <label for="firstnumber">Enter first number</label>
+      <input type="number" id="firstnumber" name="first_number">
+    </div>
+
+    <div class="input-container">
+      <label for="secondnumber">Enter second number</label>
+      <input type="number" id="secondnumber" name="second_number">
+    </div>
+
+    <div class="sum"></div>
+  </div>
+
+
+  <script src="script.js"></script>
+</body>
 </html>
